[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://themeMain.tres" type="Theme" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
activeColor = Color( 0.556863, 0.827451, 0.352941, 1 )

[node name="hboxClasses" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contDeck" type="PanelContainer" parent="."]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gridDeck" type="GridContainer" parent="contDeck"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 233.0
columns = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hboxControl" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnReset" type="Button" parent="hboxControl"]
margin_right = 510.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Reset"

[node name="btnFormat" type="Button" parent="hboxControl"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Format"

[node name="contClass" type="PanelContainer" parent="."]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gridClass" type="GridContainer" parent="contClass"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 233.0
columns = 9
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="hboxControl/btnReset" to="." method="_on_btnReset_pressed"]
[connection signal="pressed" from="hboxControl/btnFormat" to="." method="_on_btnFormat_pressed"]
